--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/pcourpron/Project-2/issues"
   },
-  "homepage": "https://github.com/pcourpron/Project-2#readme"
+  "homepage": "https://github.com/pcourpron/Project-2#readme",
+  "dependencies": {
+    "bower": "^1.8.4",
+    "chartist": "^0.11.0"
+  }
 }
