add sequelize structure

--- a/package.json
+++ b/package.json
@@ -17,5 +17,12 @@
   "bugs": {
     "url": "https://github.com/pcourpron/Project-2/issues"
   },
-  "homepage": "https://github.com/pcourpron/Project-2#readme"
+  "homepage": "https://github.com/pcourpron/Project-2#readme",
+  "dependencies": {
+    "bcrypt": "^3.0.1",
+    "express": "^4.16.3",
+    "mysql": "^2.16.0",
+    "mysql2": "^1.6.1",
+    "sequelize": "^4.39.0"
+  }
 }
