--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/pcourpron/Project-2#readme",
   "dependencies": {
     "bower": "^1.8.4",
-    "chartist": "^0.11.0"
+    "chartist": "^0.11.0",
+    "sequelize": "^4.39.0"
   }
 }
