--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.16.3",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.1",
+    "request": "^2.88.0",
     "sequelize": "^4.39.0"
   }
 }
