--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "homepage": "https://github.com/pcourpron/Project-2#readme",
   "dependencies": {
     "chartist": "^0.11.0",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.1",
     "request": "^2.88.0",
